--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.7",
     "lucide-react": "^0.454.0",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
