--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
         password: postgres
     jpa:
         hibernate: 
-            ddl-auto: create
+            ddl-auto: none
 
 server:
   servlet:
