--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -47,6 +47,11 @@
 			<version>1.6.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-database-postgresql</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
