--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,18 @@
+FROM maven:3.8.4-openjdk-17 AS build
+
+WORKDIR /app
+
+COPY pom.xml .
+COPY src ./src
+
+RUN mvn clean package -DskipTests
+
 FROM openjdk:17-jdk-alpine
-COPY target/backend-0.0.1-SNAPSHOT.jar /app/backend-0.0.1-SNAPSHOT.jar
+
+WORKDIR /app
+
+COPY --from=build /app/target/backend-0.0.1-SNAPSHOT.jar ./backend-0.0.1-SNAPSHOT.jar
+
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/app/backend-0.0.1-SNAPSHOT.jar"]
+
+ENTRYPOINT ["java", "-jar", "backend-0.0.1-SNAPSHOT.jar"]
