--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,9 @@ services:
       - "5432:5432"
 
   spring_app:
-    image: server
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
     environment:
@@ -24,7 +26,9 @@ services:
       - db
 
   react_app:
-    image: client
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "80:80"
 
