--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,6 +8,8 @@ spring:
     jpa:
         hibernate: 
             ddl-auto: none
+    flyway:
+        baseline-on-migrate: true
 
 server:
   servlet:
