--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:16 AS build
-WORKDIR /app
-COPY frontend/package*.json ./
-RUN npm install
-COPY ./frontend .
-RUN npm run build
+FROM node:18-alpine
 
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+WORKDIR /app
+
+COPY frontend/package*.json ./
+
+RUN npm install
+
+COPY ./frontend .
+
+CMD ["npm", "start"]
