fix: replace proxy pass in ngin conf

--- a/default.conf
+++ b/default.conf
@@ -23,7 +23,7 @@ http {
         server_name   45.132.19.72;
 
         location / {
-            proxy_pass    http://react_app:3000/;
+            proxy_pass    http://0.0.0.0:3000/;
         }
 
         location /api/ {
